@startuml
'https://plantuml.com/class-diagram

 abstract class AbstractEnemyAircraft
 {
    # direction:int
    - abstractPropFactory:AbstractPropFactory
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + forward():void
    + generateProp():AbstractProp
 }

abstract class AbstractProp
{
    - startTime:int
    + AbstractProp(int locationX, int locationY)
    + setStartTime(int startTime):void
    + getStartTime():int
    + {abstract} operate():void
    + {abstract} timeLimitExceeded(int currentTime):boolean
    + forward():void
}

abstract class AbstractPropFactory
{
    + {abstract} createProp(int locationX, int locationY):AbstractProp
}

AbstractPropFactory <|-- PropBloodFactory
AbstractPropFactory <|-- PropBombFactory
AbstractPropFactory <|-- PropBulletFactory

AbstractPropFactory <|.up. AbstractEnemyAircraft
PropBomb <|.. PropBombFactory
PropBullet <|.. PropBulletFactory
PropBlood <|.. PropBloodFactory

AbstractProp <|-- PropBlood
AbstractProp <|-- PropBomb
AbstractProp <|-- PropBullet

class PropBlood {
    - returnBlood:int
    + PropBlood(int locationX, int locationY)
    + operate():void
    + timeLimitExceeded(int currentTime):boolean
}

class PropBomb {
    - subscriber: List<Subscriber>
    + PropBomb(int locationX, int locationY)
    + operate(): void
    + timeLimitExceeded(int currentTime):boolean
    + addSubscriber(Subscriber obj): void
    + removeSubscriber(Subscriber obj): void
    + notifyAllSubscribers(): void
}

class PropBullet {
    - increaseShootNum:int
    - increasePower:int
    - limitTime:int
    - scatter2sweep:int
    + PropBullet(int locationX, int locationY)
    + operate():void
    + timeLimitExceeded(int currentTime):boolean
    + setInvalid():void
}

class PropBloodFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

class PropBombFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

class PropBulletFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

@enduml